--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
 
         <activity
             android:name=".ApiDemoActivity"
-            android:exported="true"
-            android:icon="@drawable/ic_glass_logo"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
             </intent-filter>
